--- a/Exercises/css-zen-garden/styles.css
+++ b/Exercises/css-zen-garden/styles.css
@@ -1,6 +1,8 @@
 *{
     margin: 0px;
     padding: 0px;
+    background-image: url(bamboo.png);
+    background-size:contain;
 }
 
 #zen-body{
@@ -9,17 +11,47 @@
 	margin: 0; 
 	padding: 0;
 }
+#title{
+    margin-top: 40px;
+}
+#designs{
+    font-size: 20px;
+}
+#designs2{
+    opacity: .20;
+    height: 75px;
+    font-style:oblique ;
+    margin-top: 25px;
+    text-decoration-color:blanchedalmond;
+}
+#designs2:hover{
+    opacity: .50;
+    transition: opacity .3s linear
+}
 #first{
     display:grid;
     grid-row: 1;
     background-image: url(koi.jpg);
     width: 100%;
     height: 225px;
-    font-size: ;
+    font-size: 25px;
     text-align: center;
     color:aliceblue;
     /* background-color: aquamarine; */
 }
 #second{
-    grid-row: 2
+    display: grid;
+    background-color:rgb(241, 241, 241);
+    width: 100%;
+    opacity: 1;
+    line-height: 25px;
+    grid-row: 2;
+    margin-top: 30px
+}
+#big{
+    margin-left: 100px;
+    margin-top: 40px
+}
+p{
+    margin-left: 100px;
 }
